# .DS_Store

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
dsstore_notes/: breadcrumb.py  inject.py  server.py  store.py
hooks/: hooks.json
