[project]
name = "dsstore-notes"
version = "0.1.0"
description = "Per-file ambient notes for agentic coding tools, stored in .DS_Store"
requires-python = ">=3.11"
dependencies = [
    "ds-store>=1.3.0",
    "mcp>=1.2.0",
]

[project.scripts]
dsstore-inject = "dsstore_notes.inject:main"
dsstore-breadcrumb = "dsstore_notes.breadcrumb:main"
dsstore-server = "dsstore_notes.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsstore_notes"]
